# solana-lockbox

./: .gitignore  API.md  Anchor.toml  CHANGELOG.md  CLEANUP_SUMMARY_2025-10-30.md  CLOSE-CHUNK-FIX.md  DEPLOYMENT.md  DEPLOYMENT_V2.md  DEPLOY_INSTRUCTIONS.md  DEVELOPER_GUIDE.md  FEE_STRUCTURE_AND_ACCOUNT_MANAGEMENT_SUMMARY.md  FRONTEND_COPY_AND_CLAIMS_REVIEW.md  FRONTEND_REVIEW_SUMMARY.txt  HACKATHON.md  HALLUCINATION_AUDIT_2025-10-30.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE_V2.md  MOBILE_WALLET_SUPPORT.md  MULTI-WALLET-RECOVERY-GUIDE.md  ORPHANED_CHUNKS_PREVENTION.md  PASSWORD_MANAGER_EXPANSION.md  PHASE5_FINAL_SESSION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_PROGRESS_SUMMARY.md  PHASE5_UI_COMPLETE.md  QA_ANALYSIS_REPORT.md  QUICKSTART.md  README.md  RECOVERY_V2_DESIGN.md  RELEASE_NOTES_v1.2.0.md  RELEASE_SUMMARY.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_TRAIL_OF_BITS.md  SECURITY_FIXES_TEST_PLAN.md  SECURITY_POLICY.md  SECURITY_TESTS_README.md  SESSION_CONTINUATION_SUMMARY.md  (+16 more)
app/: SDK_INTEGRATION.md  (+3 more)
programs/lockbox/: Cargo.toml
programs/lockbox/src/: errors.rs  lib.rs
programs/lockbox/src/instructions/: category_management.rs  chunk_management.rs  close_account.rs  emergency_access_management.rs  initialize.rs  mod.rs  password_entry.rs  recovery_management.rs  recovery_management_v2.rs  subscription.rs
programs/lockbox/src/state/: category.rs  emergency_access.rs  master_lockbox.rs  mod.rs  recovery.rs  recovery_v2.rs  storage_chunk.rs  subscription.rs
programs/lockbox/tests/: security_fixes.rs
(+308 files in other folders)
