[package]
name = "lockbox"
version = "2.2.0"
description = "Wallet-tied encrypted storage on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockbox"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
